Some Code Modifications