@@ -12,6 +12,7 @@ import java.nio.charset.CharsetEncoder;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.List;
 import javax.crypto.Cipher;
 import javax.crypto.SecretKey;
@@ -31,6 +32,7 @@ import org.apache.ecs.html.Table;
 import org.owasp.webgoat.session.ECSFactory;
 import org.owasp.webgoat.session.WebSession;
 import org.owasp.webgoat.util.HtmlEncoder;
+import java.util.Base64;
 
 
 /***************************************************************************************************
@@ -77,9 +79,9 @@ public class Encoding extends LessonAdapter
 
     // local encoders
 
-    private static sun.misc.BASE64Decoder decoder = new sun.misc.BASE64Decoder();
+    // private static java.util.Base64 decoder = new Base64.getDecoder();
 
-    private static sun.misc.BASE64Encoder encoder = new sun.misc.BASE64Encoder();
+    // private static java.util.Base64.Encoder encoder;
 
     // encryption constant
 
@@ -99,7 +101,7 @@ public class Encoding extends LessonAdapter
     public static String base64Decode(String str) throws IOException
     {
 
-        byte[] b = decoder.decodeBuffer(str);
+        byte[] b = Base64.getDecoder().decode(str);
 
         return (new String(b));
     }
@@ -147,7 +149,7 @@ public class Encoding extends LessonAdapter
 
         byte[] b = str.getBytes();
 
-        return (encoder.encode(b));
+        return (Base64.getEncoder().encodeToString(b));
     }
 
     /**
@@ -161,7 +163,7 @@ public class Encoding extends LessonAdapter
     public static String base64Encode(byte[] b)
     {
 
-        return (encoder.encode(b));
+        return (Base64.getEncoder().encodeToString(b));
     }
 
     /**
@@ -330,7 +332,7 @@ public class Encoding extends LessonAdapter
 
             passwordDecryptCipher.init(Cipher.DECRYPT_MODE, k, ps);
 
-            byte[] dec = decoder.decodeBuffer(str);
+            byte[] dec = Base64.getDecoder().decode(str);
 
             byte[] utf8 = passwordDecryptCipher.doFinal(dec);
 
@@ -379,7 +381,7 @@ public class Encoding extends LessonAdapter
 
             byte[] enc = passwordEncryptCipher.doFinal(utf8);
 
-            return encoder.encode(enc);
+            return Base64.getEncoder().encodeToString(enc);
         }
 
         catch (Exception e)
